--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.0.2",
     "element-plus": "^1.0.1-beta.3",
     "qrcode2": "^1.2.3",
     "qrcodejs2": "0.0.2",
@@ -27,6 +28,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "element-theme-chalk": "^2.15.1",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
     "typescript": "~3.9.3",
